# TinyMachine

./: CMakeLists.txt  README.md  configure.py
llvm/TinyMachine/: CMakeLists.txt  README.md  TinyMachine.h  TinyMachine.td  TinyMachineAsmPrinter.cpp  TinyMachineAsmPrinter.h  TinyMachineFrameLowering.cpp  TinyMachineFrameLowering.h  TinyMachineISelLowering.cpp  TinyMachineISelLowering.h  TinyMachineInstrInfo.cpp  TinyMachineInstrInfo.h  TinyMachineInstrInfo.td  TinyMachineMCAsmInfo.cpp  TinyMachineMCCodeEmitter.cpp  TinyMachineMCTargetDesc.cpp  TinyMachineMCTargetDesc.h  TinyMachineRegisterInfo.cpp  TinyMachineRegisterInfo.h  TinyMachineSubtarget.cpp  TinyMachineSubtarget.h  TinyMachineTargetMachine.cpp  TinyMachineTargetMachine.h
llvm/TinyMachine/TinyMachine/: TinyMachine.h  TinyMachineAsmPrinter.cpp  TinyMachineAsmPrinter.h  TinyMachineInstrInfo.cpp  TinyMachineRegisterInfo.h
llvm/TinyMachine/TinyMachine/MCTargetDesc/: CMakeLists.txt
llvm/TinyMachine/TinyMachine/TargetInfo/: CMakeLists.txt
src/: TinyMachine.hpp  test.cpp
test/: AssemblerFixesTest.cpp  AssemblerTest.cpp  VirtualMachineFixesTest.cpp  VirtualMachineTest.cpp
